--- a/house_attendance.html
+++ b/house_attendance.html
@@ -67,8 +67,8 @@
                 </div>
             </div>
         </div>
-        <h3 class="border p-2" style="text-align: center">
-            <a data-toggle="collapse" href="#glance"> The House at a Glance </a>
+        <h3 class="border p-2 bg-dark" style="text-align: center">
+            <a class="text-light" data-toggle="collapse" href="#glance"> &#10509; Click &#10508; to See the House at a Glance </a>
         </h3>
         <div class="panel-collapse collapse in" id="glance">
             <table class="table table-hover">
@@ -91,8 +91,8 @@
                 <div class="col lBorder"> </div>
             </div>
         </div>
-        <h3 class="border p-2" style="text-align: center">
-            <a data-toggle="collapse" href="#collapseTop"> Most Engaged &#40;Attendance Rate of the Top 10&#37;&#41; - Overall </a>
+        <h3 class="border p-2 bg-dark" style="text-align: center">
+            <a class="text-light" data-toggle="collapse" href="#collapseTop"> ... The Most Engaged &#40;Attendance Rate of the Top 10&#37;&#41; - Overall </a>
         </h3>
         <div class="panel-collapse collapse" id="collapseTop">
             <table class="table table-hover">
@@ -117,8 +117,8 @@
                 <div class="col lBorder"> </div>
             </div>
         </div>
-        <h3 class="border p-2" style="text-align: center">
-            <a data-toggle="collapse" href="#collapse1"> Most Engaged &#40;Top 10% Attendance Rate&#41; - Dem. </a>
+        <h3 class="border p-2 bg-dark" style="text-align: center" href="#collapse1">
+            <a class="text-light" data-toggle="collapse" href="#collapse1"> ... The Most Engaged &#40;Top 10% Attendance Rate&#41; - Dem. </a>
         </h3>
         <div class="panel-collapse collapse" id="collapse1">
             <table class="table table-hover">
@@ -143,8 +143,8 @@
                 <div class="col lBorder"> </div>
             </div>
         </div>
-        <h3 class="border p-2" style="text-align: center">
-            <a data-toggle="collapse" href="#collapse2"> Most Engaged &#40;Attendance Rate of the Top 10&#37;&#41; - Rep. </a>
+        <h3 class="border p-2 bg-dark" style="text-align: center">
+            <a class="text-light" data-toggle="collapse" href="#collapse2"> ... The Most Engaged &#40;Attendance Rate of the Top 10&#37;&#41; - Rep. </a>
         </h3>
         <div class="panel-collapse collapse" id="collapse2">
             <table class="table table-hover">
@@ -168,8 +168,8 @@
                 <div class="col lBorder"> </div>
             </div>
         </div>
-        <h3 class="border p-2" style="text-align: center">
-            <a data-toggle="collapse" href="#collapse3"> Most Engaged &#40;Attendance Rate of the Top 10&#37;&#41; - Indep. </a>
+        <h3 class="border bg-dark p-2" style="text-align: center">
+            <a class="text-light" data-toggle="collapse" href="#collapse3"> ... The Most Engaged &#40;Attendance Rate of the Top 10&#37;&#41; - Indep. </a>
         </h3>
         <div class="panel-collapse collapse" id="collapse3">
             <table class="table table-hover">
@@ -193,8 +193,8 @@
                 <div class="col lBorder"> </div>
             </div>
         </div>
-        <h3 class="border p-2" style="text-align: center">
-            <a data-toggle="collapse" href="#collapse4"> Least Engaged &#40;Bottom 10% Attendance Rate&#41; - Overall </a>
+        <h3 class="border p-2 bg-dark" style="text-align: center">
+            <a class="text-light" data-toggle="collapse" href="#collapse4"> ...The Least Engaged &#40;Bottom 10% Attendance Rate&#41; - Overall </a>
         </h3>
         <div class="panel-collapse collapse" id="collapse4">
             <table class="table table-hover">
@@ -220,8 +220,8 @@
                 <div class="col lBorder"> </div>
             </div>
         </div>
-        <h3 class="border p-2" style="text-align: center">
-            <a data-toggle="collapse" href="#collapse6"> Least Engaged &#40;Top 10% Attendance Rate&#41; - Dem. </a>
+        <h3 class="border p-2 bg-dark" style="text-align: center">
+            <a class="text-light" data-toggle="collapse" href="#collapse6"> ... The Least Engaged &#40;Top 10% Attendance Rate&#41; - Dem. </a>
         </h3>
         <div class="panel-collapse collapse" id="collapse6">
             <table class="table table-hover">
@@ -246,8 +246,8 @@
                 <div class="col lBorder"> </div>
             </div>
         </div>
-        <h3 class="border p-2" style="text-align: center">
-            <a data-toggle="collapse" href="#collapse7"> Least Engaged &#40;Attendance Rate of the Top 10&#37;&#41; - Rep. </a>
+        <h3 class="border p-2 bg-dark" style="text-align: center">
+            <a class="text-light" data-toggle="collapse" href="#collapse7"> ... The Least Engaged &#40;Attendance Rate of the Top 10&#37;&#41; - Rep. </a>
         </h3>
         <div class="panel-collapse collapse" id="collapse7">
             <table class="table table-hover">
@@ -271,8 +271,8 @@
                 <div class="col lBorder"> </div>
             </div>
         </div>
-        <h3 class="border p-2" style="text-align: center">
-            <a data-toggle="collapse" href="#collapse8"> Least Engaged &#40;Attendance Rate of the Top 10&#37;&#41; - Indep. </a>
+        <h3 class="border p-2 bg-dark" style="text-align: center">
+            <a class="text-light" data-toggle="collapse" href="#collapse8"> ... The Least Engaged &#40;Attendance Rate of the Top 10&#37;&#41; - Indep. </a>
         </h3>
         <div class="panel-collapse collapse" id="collapse8">
             <table class="table table-hover">
@@ -290,7 +290,7 @@
             </table>
         </div>
 
-        <footer class="mt-5">
+        <footer class="my-5">
             <div class="d-flex justify-content-center">
                 <p> &copy;2019 Transparent Government in Fact | TGIF </p>
             </div>
