finished the tables for Loyalty on both House and Senate and added unique images to distinguish Attendance and Loyalty from one another.

--- a/senate_attendance.html
+++ b/senate_attendance.html
@@ -57,13 +57,12 @@
         </header>
 
 
-        <div class=col style="height: 30px"> </div>
-        <img src="/assets/images/architecture-attractions-building-208702.jpg" class="img-fluid" alt="DC">
+        <h1 class="text-indent py-3" style="text-align: center"> Attendance in the Senate </h1>
+        <img src="/assets/images/analog-art-beautiful-963486.jpg" class="img-fluid" alt="DC">
         <div class=col style="height: 30px"> </div>
         <div class="container-fluid">
             <div class="row">
                 <div>
-                    <h2 class="text-indent" style="text-align: center"> Attendance in the Senate </h2>
                     <p class="text-indent">The Constitution specifies that a majority of members constitutes a quorum to do business in each house. Representatives and senators rarely force the presence of a quorum by demanding quorum calls; thus, in most cases, debates continue even if a majority is not present.</p>
                     <p> The Senate uses roll-call votes; a clerk calls out the names of all the senators, each senator stating "aye" or "no" when his or her name is announced. The House reserves roll-call votes for the most formal matters, as a roll-call of all 435 representatives takes quite some time; normally, members vote by electronic device. In the case of a tie, the motion in question fails. In the Senate, the Vice President may (if present) cast the tiebreaking vote.</p>
                     <div class="col-4"> </div>
