fixed an issue where overall attendance was displaying false information, changed original variable value to insure the right object was being sorted

--- a/house_attendance.html
+++ b/house_attendance.html
@@ -85,12 +85,7 @@
             </table>
         </div>
 
-        <div class="container-fluid">
-            <div class="row p-2">
-                <div class="col rBorder"> </div>
-                <div class="col lBorder"> </div>
-            </div>
-        </div>
+
         <h3 class="border p-2 bg-dark" style="text-align: center">
             <a class="text-light" data-toggle="collapse" href="#collapseTop"> ... The Most Engaged &#40;Attendance Rate of the Top 10&#37;&#41; - Overall </a>
         </h3>
@@ -111,12 +106,7 @@
             </table>
         </div>
 
-        <div class="container-fluid">
-            <div class="row p-2">
-                <div class="col rBorder"> </div>
-                <div class="col lBorder"> </div>
-            </div>
-        </div>
+
         <h3 class="border p-2 bg-dark" style="text-align: center" href="#collapse1">
             <a class="text-light" data-toggle="collapse" href="#collapse1"> ... The Most Engaged &#40;Top 10% Attendance Rate&#41; - Dem. </a>
         </h3>
@@ -137,12 +127,7 @@
             </table>
         </div>
 
-        <div class="container-fluid">
-            <div class="row p-2">
-                <div class="col rBorder"> </div>
-                <div class="col lBorder"> </div>
-            </div>
-        </div>
+
         <h3 class="border p-2 bg-dark" style="text-align: center">
             <a class="text-light" data-toggle="collapse" href="#collapse2"> ... The Most Engaged &#40;Attendance Rate of the Top 10&#37;&#41; - Rep. </a>
         </h3>
@@ -162,12 +147,7 @@
             </table>
         </div>
 
-        <div class="container-fluid">
-            <div class="row p-2">
-                <div class="col rBorder"> </div>
-                <div class="col lBorder"> </div>
-            </div>
-        </div>
+
         <h3 class="border bg-dark p-2" style="text-align: center">
             <a class="text-light" data-toggle="collapse" href="#collapse3"> ... The Most Engaged &#40;Attendance Rate of the Top 10&#37;&#41; - Indep. </a>
         </h3>
@@ -187,12 +167,7 @@
             </table>
         </div>
 
-        <div class="container-fluid">
-            <div class="row p-2">
-                <div class="col rBorder"> </div>
-                <div class="col lBorder"> </div>
-            </div>
-        </div>
+
         <h3 class="border p-2 bg-dark" style="text-align: center">
             <a class="text-light" data-toggle="collapse" href="#collapse4"> ...The Least Engaged &#40;Bottom 10% Attendance Rate&#41; - Overall </a>
         </h3>
@@ -214,12 +189,7 @@
             </table>
         </div>
 
-        <div class="container-fluid">
-            <div class="row p-2">
-                <div class="col rBorder"> </div>
-                <div class="col lBorder"> </div>
-            </div>
-        </div>
+
         <h3 class="border p-2 bg-dark" style="text-align: center">
             <a class="text-light" data-toggle="collapse" href="#collapse6"> ... The Least Engaged &#40;Top 10% Attendance Rate&#41; - Dem. </a>
         </h3>
@@ -240,12 +210,7 @@
             </table>
         </div>
 
-        <div class="container-fluid">
-            <div class="row p-2">
-                <div class="col rBorder"> </div>
-                <div class="col lBorder"> </div>
-            </div>
-        </div>
+
         <h3 class="border p-2 bg-dark" style="text-align: center">
             <a class="text-light" data-toggle="collapse" href="#collapse7"> ... The Least Engaged &#40;Attendance Rate of the Top 10&#37;&#41; - Rep. </a>
         </h3>
@@ -265,12 +230,7 @@
             </table>
         </div>
 
-        <div class="container-fluid">
-            <div class="row p-2">
-                <div class="col rBorder"> </div>
-                <div class="col lBorder"> </div>
-            </div>
-        </div>
+        
         <h3 class="border p-2 bg-dark" style="text-align: center">
             <a class="text-light" data-toggle="collapse" href="#collapse8"> ... The Least Engaged &#40;Attendance Rate of the Top 10&#37;&#41; - Indep. </a>
         </h3>
@@ -299,6 +259,7 @@
 
     <script src="/congress_113_house.js"></script>
     <script src="/main.js"> </script>
+    <script src="/statistics.js"> </script>    
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
