--- a/senate_attendance.html
+++ b/senate_attendance.html
@@ -87,12 +87,7 @@
             </table>
         </div>
 
-        <div class="container-fluid">
-            <div class="row p-2">
-                <div class="col rBorder"> </div>
-                <div class="col lBorder"> </div>
-            </div>
-        </div>
+
         <h3 class="border p-2 bg-dark" style="text-align: center">
             <a class="text-light" data-toggle="collapse" href="#collapseTop"> ... The Most Engaged &#40;Attendance Rate of the Top 10&#37;&#41; - Overall </a>
         </h3>
@@ -113,12 +108,7 @@
             </table>
         </div>
 
-        <div class="container-fluid">
-            <div class="row p-2">
-                <div class="col rBorder"> </div>
-                <div class="col lBorder"> </div>
-            </div>
-        </div>
+
         <h3 class="border p-2 bg-dark" style="text-align: center" href="#collapse1">
             <a class="text-light" data-toggle="collapse" href="#collapse1"> ... The Most Engaged &#40;Top 10% Attendance Rate&#41; - Dem. </a>
         </h3>
@@ -139,12 +129,7 @@
             </table>
         </div>
 
-        <div class="container-fluid">
-            <div class="row p-2">
-                <div class="col rBorder"> </div>
-                <div class="col lBorder"> </div>
-            </div>
-        </div>
+
         <h3 class="border p-2 bg-dark" style="text-align: center">
             <a class="text-light" data-toggle="collapse" href="#collapse2"> ... The Most Engaged &#40;Attendance Rate of the Top 10&#37;&#41; - Rep. </a>
         </h3>
@@ -164,12 +149,7 @@
             </table>
         </div>
 
-        <div class="container-fluid">
-            <div class="row p-2">
-                <div class="col rBorder"> </div>
-                <div class="col lBorder"> </div>
-            </div>
-        </div>
+
         <h3 class="border bg-dark p-2" style="text-align: center">
             <a class="text-light" data-toggle="collapse" href="#collapse3"> ... The Most Engaged &#40;Attendance Rate of the Top 10&#37;&#41; - Indep. </a>
         </h3>
@@ -189,12 +169,7 @@
             </table>
         </div>
 
-        <div class="container-fluid">
-            <div class="row p-2">
-                <div class="col rBorder"> </div>
-                <div class="col lBorder"> </div>
-            </div>
-        </div>
+
         <h3 class="border p-2 bg-dark" style="text-align: center">
             <a class="text-light" data-toggle="collapse" href="#collapse4"> ...The Least Engaged &#40;Bottom 10% Attendance Rate&#41; - Overall </a>
         </h3>
@@ -216,12 +191,7 @@
             </table>
         </div>
 
-        <div class="container-fluid">
-            <div class="row p-2">
-                <div class="col rBorder"> </div>
-                <div class="col lBorder"> </div>
-            </div>
-        </div>
+
         <h3 class="border p-2 bg-dark" style="text-align: center">
             <a class="text-light" data-toggle="collapse" href="#collapse6"> ... The Least Engaged &#40;Top 10% Attendance Rate&#41; - Dem. </a>
         </h3>
@@ -242,12 +212,7 @@
             </table>
         </div>
 
-        <div class="container-fluid">
-            <div class="row p-2">
-                <div class="col rBorder"> </div>
-                <div class="col lBorder"> </div>
-            </div>
-        </div>
+
         <h3 class="border p-2 bg-dark" style="text-align: center">
             <a class="text-light" data-toggle="collapse" href="#collapse7"> ... The Least Engaged &#40;Attendance Rate of the Top 10&#37;&#41; - Rep. </a>
         </h3>
@@ -267,12 +232,7 @@
             </table>
         </div>
 
-        <div class="container-fluid">
-            <div class="row p-2">
-                <div class="col rBorder"> </div>
-                <div class="col lBorder"> </div>
-            </div>
-        </div>
+
         <h3 class="border p-2 bg-dark" style="text-align: center">
             <a class="text-light" data-toggle="collapse" href="#collapse8"> ... The Least Engaged &#40;Attendance Rate of the Top 10&#37;&#41; - Indep. </a>
         </h3>
@@ -301,6 +261,7 @@
 
     <script src="/congress_113_senate.js"></script>
     <script src="/main.js"> </script>
+    <script src="/statistics.js"> </script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
@@ -314,7 +275,6 @@
         leastAttendTableDem();
         leastAttendTableRep();
         leastAttendTableInd();
-
     </script>
 </body>
 
