--- a/senate_loyalty.html
+++ b/senate_loyalty.html
@@ -86,12 +86,7 @@
             </table>
         </div>
 
-        <div class="container-fluid">
-            <div class="row p-2">
-                <div class="col rBorder"> </div>
-                <div class="col lBorder"> </div>
-            </div>
-        </div>
+
         <h3 class="border p-2 bg-dark" style="text-align: center">
             <a class="text-light" data-toggle="collapse" href="#collapseTop"> ... Most Loyal &#40;Top 10&#37; 'Votes with Party' Rate&#41; - Overall </a>
         </h3>
@@ -112,12 +107,7 @@
             </table>
         </div>
 
-        <div class="container-fluid">
-            <div class="row p-2">
-                <div class="col rBorder"> </div>
-                <div class="col lBorder"> </div>
-            </div>
-        </div>
+
         <h3 class="border p-2 bg-dark" style="text-align: center" href="#collapse1">
             <a class="text-light" data-toggle="collapse" href="#collapse1"> ... Most Loyal &#40;Top 10&#37; 'Votes with Party' Rate&#41; - Dem. </a>
         </h3>
@@ -138,12 +128,6 @@
             </table>
         </div>
 
-        <div class="container-fluid">
-            <div class="row p-2">
-                <div class="col rBorder"> </div>
-                <div class="col lBorder"> </div>
-            </div>
-        </div>
         <h3 class="border p-2 bg-dark" style="text-align: center">
             <a class="text-light" data-toggle="collapse" href="#collapse2">  ... Most Loyal &#40;Top 10&#37; 'Votes with Party' Rate&#41; - Rep. </a>
         </h3>
@@ -163,12 +147,7 @@
             </table>
         </div>
 
-        <div class="container-fluid">
-            <div class="row p-2">
-                <div class="col rBorder"> </div>
-                <div class="col lBorder"> </div>
-            </div>
-        </div>
+        
         <h3 class="border bg-dark p-2" style="text-align: center">
             <a class="text-light" data-toggle="collapse" href="#collapse3">  ... Most Loyal &#40;Top 10&#37; 'Votes with Party' Rate&#41; - Indep.</a>
         </h3>
@@ -188,12 +167,7 @@
             </table>
         </div>
 
-        <div class="container-fluid">
-            <div class="row p-2">
-                <div class="col rBorder"> </div>
-                <div class="col lBorder"> </div>
-            </div>
-        </div>
+
         <h3 class="border p-2 bg-dark" style="text-align: center">
             <a class="text-light" data-toggle="collapse" href="#collapse4">  ... Least Loyal &#40;Top 10&#37; 'Votes with Party' Rate&#41; - Overall.</a>
         </h3>
@@ -215,12 +189,7 @@
             </table>
         </div>
 
-        <div class="container-fluid">
-            <div class="row p-2">
-                <div class="col rBorder"> </div>
-                <div class="col lBorder"> </div>
-            </div>
-        </div>
+
         <h3 class="border p-2 bg-dark" style="text-align: center">
             <a class="text-light" data-toggle="collapse" href="#collapse6">  ... Least Loyal &#40;Top 10&#37; 'Votes with Party' Rate&#41; - Dem.</a>
         </h3>
@@ -241,12 +210,7 @@
             </table>
         </div>
 
-        <div class="container-fluid">
-            <div class="row p-2">
-                <div class="col rBorder"> </div>
-                <div class="col lBorder"> </div>
-            </div>
-        </div>
+
         <h3 class="border p-2 bg-dark" style="text-align: center">
             <a class="text-light" data-toggle="collapse" href="#collapse7"> ... Least Loyal &#40;Top 10&#37; 'Votes with Party' Rate&#41; - Rep. </a>
         </h3>
@@ -266,12 +230,7 @@
             </table>
         </div>
 
-        <div class="container-fluid">
-            <div class="row p-2">
-                <div class="col rBorder"> </div>
-                <div class="col lBorder"> </div>
-            </div>
-        </div>
+
         <h3 class="border p-2 bg-dark" style="text-align: center">
             <a class="text-light" data-toggle="collapse" href="#collapse8"> ... Least Loyal &#40;Top 10&#37; 'Votes with Party' Rate&#41; - Indep. </a>
         </h3>
@@ -300,6 +259,7 @@
 
     <script src="/congress_113_senate.js"></script>
     <script src="/main.js"> </script>
+    <script src="/statistics.js"> </script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
